--- a/src/app/garage-modify/garage-modify.component.html
+++ b/src/app/garage-modify/garage-modify.component.html
@@ -1,1 +1,7 @@
-<p>garage-modify works!</p>
+<div class="m-4">
+    <button type="button" class="btn btn-link" routerLink="/garage-list">
+      Back to garages list
+    </button>
+  </div>
+  
+  <app-garage-form [garage]="garage" [violationList]="violationList" (formSubmit)="submit($event)"></app-garage-form>
